hphp/test/zend/good/Zend/tests/isset_func_error.php.expectf

Fatal error: Call to undefined function abc() in %s/isset_func_error.php on line 2
